--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "install": "node-gyp rebuild"
+    "install": "node setup.js"
   },
   "devDependencies": {},
   "optionalDependencies": {},
