--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
   "optionalDependencies": {},
   "dependencies": {
     "nan": ">=2.0.9",
-    "node-pre-gyp": ">=0.6.36",
-    "qt-darwin": "0.0.4"
+    "node-pre-gyp": ">=0.6.36"
   }
 }
